Implemented service layer for core business modules